# NeuralNetworkDemo

./: CMakeLists.txt
old/: InteractiveSubwindow.cxx  NetworkConfigSubwindow.cxx  NetworkConfigSubwindow.hxx  NeuralNetwork.cxx  NeuralNetwork.hxx
src/: Log.cxx  SDL2Windows.cxx  SDL2Windows.hxx  main.cxx
src/CommonLayers/: BernoulliCrossEntropyErrorLayer.cxx  BernoulliCrossEntropyErrorLayer.hxx  LeakyReluLayer.cxx  LeakyReluLayer.hxx  LinearLayer.cxx  LinearLayer.hxx  MeanSquaredErrorLayer.cxx  MeanSquaredErrorLayer.hxx  ReluLayer.cxx  ReluLayer.hxx  SigmoidLayer.cxx  SigmoidLayer.hxx
src/NetworkInstances/: LinearRegression.cxx  LinearRegression.hxx  PointsRegressionDemo.cxx  PointsRegressionDemo.hxx  Relu.cxx  Relu.hxx  Sigmoid.cxx  Sigmoid.hxx  SmallestFullNetwork.cxx  SmallestFullNetwork.hxx
src/NeuralNetwork/: ErrorLayer.cxx  ErrorLayer.hxx  InteractiveSubwindow.cxx  InteractiveSubwindow.hxx  Layer.cxx  Layer.hxx  Network.cxx  Network.hxx  NetworkConfigSubwindow.cxx  NeuralNetwork.cxx  NeuralNetwork.hxx
src/Util/: Log.cxx  Log.hxx  SDL2Windows.cxx  SDL2Windows.hxx
